--- a/client/app.html
+++ b/client/app.html
@@ -8,7 +8,7 @@
         href="assets/images/favicon.png">
 
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
 
   <!-- iOS Web Clip -->
   <link rel="apple-touch-icon" href="assets/images/favicon.png">
